--- a/package.json
+++ b/package.json
@@ -5,13 +5,18 @@
   "author": "Michael Jackson",
   "license": "MIT",
   "main": "lib",
+  "browser": "umd/dropbox-client.min.js",
   "files": [
     "lib"
   ],
   "scripts": {
     "lint": "eslint modules",
     "test": "npm run lint",
-    "build": "rimraf lib && babel ./modules -d lib",
+    "build": "node ./scripts/build.js",
+    "build-cjs": "rimraf lib && babel ./modules -d lib",
+    "build-min": "webpack -p modules/index.js umd/dropbox-client.min.js",
+    "build-umd": "webpack modules/index.js umd/dropbox-client.js",
+    "release": "node ./scripts/release.js",
     "prepublish": "npm run build"
   },
   "dependencies": {
@@ -21,11 +26,16 @@
   "devDependencies": {
     "babel-cli": "^6.6.5",
     "babel-eslint": "^5.0.0",
+    "babel-loader": "^6.2.4",
     "babel-preset-es2015": "^6.6.0",
     "babel-preset-stage-1": "^6.5.0",
-    "eslint": "^2.2.0",
+    "eslint": "2.2.0",
     "eslint-config-airbnb": "^6.1.0",
     "eslint-plugin-react": "^4.2.3",
-    "rimraf": "^2.5.2"
+    "gzip-size": "^3.0.0",
+    "pretty-bytes": "^3.0.1",
+    "readline-sync": "^1.4.1",
+    "rimraf": "^2.5.2",
+    "webpack": "^1.12.14"
   }
 }
