--- a/package.json
+++ b/package.json
@@ -1,13 +1,15 @@
 {
   "name": "dropbox-client",
   "version": "1.0.0",
-  "description": "JavaScript client for the Dropbox API",
+  "description": "Dropbox API client",
   "author": "Michael Jackson",
   "license": "MIT",
-  "main": "lib",
+  "webpack": "lib",
   "browser": "umd/dropbox-client.min.js",
+  "main": "lib",
   "files": [
-    "lib"
+    "lib",
+    "umd"
   ],
   "scripts": {
     "lint": "eslint modules",
@@ -20,7 +22,7 @@
     "prepublish": "npm run build"
   },
   "dependencies": {
-    "http-client": "^2.3.1",
+    "http-client": "^2.4.1",
     "query-string": "^3.0.1"
   },
   "devDependencies": {
@@ -37,5 +39,9 @@
     "readline-sync": "^1.4.1",
     "rimraf": "^2.5.2",
     "webpack": "^1.12.14"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/mjackson/dropbox-client.git"
   }
 }
