--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   ],
   "scripts": {
     "lint": "eslint modules",
-    "test": "npm run lint",
+    "test": "npm run lint && mocha -r babel-register modules/**/*-test.js",
     "build": "node ./scripts/build.js",
     "build-cjs": "rimraf lib && babel ./modules -d lib",
     "build-min": "webpack -p modules/index.js umd/dropbox-client.min.js",
@@ -29,10 +29,13 @@
     "babel-loader": "^6.2.4",
     "babel-preset-es2015": "^6.6.0",
     "babel-preset-stage-1": "^6.5.0",
+    "babel-register": "^6.7.2",
     "eslint": "^2.5.1",
     "eslint-config-airbnb": "^6.1.0",
     "eslint-plugin-react": "^4.2.3",
+    "expect": "^1.18.0",
     "gzip-size": "^3.0.0",
+    "mocha": "^2.4.5",
     "pretty-bytes": "^3.0.1",
     "readline-sync": "^1.4.1",
     "rimraf": "^2.5.2",
