--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "lint": "eslint modules",
     "test": "npm run lint && mocha -r babel-register modules/**/*-test.js",
     "build": "node ./scripts/build.js",
-    "build-cjs": "rimraf lib && babel ./modules -d lib",
+    "build-cjs": "rimraf lib && babel ./modules -d lib --ignore '__tests__'",
     "build-min": "webpack -p modules/index.js umd/dropbox-client.min.js",
     "build-umd": "webpack modules/index.js umd/dropbox-client.js",
     "release": "node ./scripts/release.js",
